# leveldb

./: .gitignore  CMakeLists.txt  README  WINDOWS  WINDOWS.md  build_detect_platform  vs2010.vcxproj
db/: db_impl.cc  db_impl.h  db_test.cc
include/leveldb/: db.h  slice.h
port/: atomic_pointer.h  port_win.h
port/win/: stdint.h
util/: comparator.cc  env_win.cc
